<resources>
    <string name="app_name">TrvelingInGroup1.0</string>
    <string name="welcomemasage">שלום ,השתשמש במערכת בחוכמה , שימוש נעים</string>
    <string name="guide">מדריך</string>
    <string name="traveler">מטייל</string>
    <string name="title_activity_guide_reg">רישום מדריכים</string>
    <string name="title_home">מסך ראשי</string>
    <string name="title_dashboard">לוח שליטה</string>
    <string name="title_notifications">התראות</string>
    <string name="title_activity_traveler_reg">רישום מטיילים</string>
    <string name="traveler_reg_page_masage">מלא פרטים בהתאם לנדרש</string>
    <string name="send_data">שמור</string>
    <string name="title_activity_scrolling_groups">ScrollingGroupsActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_traveler_activity_main">MainTravelerActivity</string>
    <string name="title_guide_activity_main">MainGudieActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Traveling Group</string>
    <string name="nav_header_subtitle">TravelInGroup@Android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">בית</string>
    <string name="menu_gallery">גלריית תמונות</string>
    <string name="menu_slideshow">שקופיות</string>
    <string name="menu_tools">כלים</string>
    <string name="menu_share">שתף</string>
    <string name="menu_send">הודעת טקסט</string>
    <string name="start_travel">התחל לטייל</string>
    <string name="addNewGroup">צור קבוצה</string>
    <string name="addNewGuide">הוסף מדריך</string>
    <string name="startAsTourguide">התחל כמדריך</string>
    <string name="GuideName">שם מדריך</string>
    <string name="spokentang">שפת הנחיה</string>
    <string name="localguide">מדריך מקומי</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_user_list">users</string>
    <string name="title_user_detail">User Detail</string>
    <string name="user_uid">מזהה משתמש</string>
    <string name="travele_reg_massage">אנא דווח על כל בעיה או צורך</string>
    <string name="show_guides">הצג מדריכים</string>
    <string name="show_my_home">הצג בית-מלון</string>
    <string name="show_list_of_groups">הצג קבוצות</string>
    <string name="change_options">הגדרות יישום</string>
    <string name="current_showed_data">מוצג כעת</string>
    <string name="nav_camera">מצלמה</string>
    <string name="communicate">תקשורת</string>
    <string name="nav_call">טלפון</string>
    <string name="isreligus">דתי שומר מסורת</string>
    <string name="isKosher">אוכל כשר</string>
    <string name="isdeff">בעיות שמיעה</string>
    <string name="isblainde">כבד ראיה</string>
    <string name="miner">קטין</string>
    <string name="needhelp">זקוק לסיוע</string>
    <string name="userId">מזהה משתמש</string>
    <string name="groupid">מזהה קבוצה</string>
    <string name="groupContactInfo">דרכי תקשורת עם הקבוצה</string>
    <string name="dateOfTour">תאריך הטיול</string>
    <string name="joinGroup">הצטרף לקבוצה</string>
    <string name="groupLeader">מדריך הקבוצה</string>
    <string name="search_range">טווח איתור</string>
    <string name="fillinfullname">מלא שם פרטי ומשפחה</string>
    <string name="fillinphonenumber">מלא מספר טלפון</string>
    <string name="fillinaddress">הכנס כתובת מגורים או מלון</string>
    <string name="username">שם משתמש</string>
    <string name="phonenumber">מספר טלפון</string>
    <string name="address">כתובת</string>
    <string name="showedname">שם מוצג</string>
    <string name="profilepicture">תמונת פרופיל</string>
    <string name="currentGroup">קבוצה נוכחית</string>
    <string name="fillInPassword">הזן ססמא</string>
    <string name="userEmail">דוא\"ל</string>
    <string name="date_of_birth">ת.לידה</string>
    <string name="userImageProfilePicture">תמונת פרופיל</string>
    <string name="add_traveler_to_group">הוסף מטייל לקבוצה</string>
    <string name="group_profile_picture">תמונת קבוצה</string>
    <string name="shepherdlogo">app logo</string>
    <string name="travelerInfo">מידע על המטייל</string>
    <string name="addphonenumber">הזן מספר טלפון</string>
    <string name="last_name">שם משפחה</string>
    <string name="first_name">שם פרטי</string>
    <string name="email_address">כתובת דואר אלקטרוני</string>
    <string name="display_name">שם תצוגה</string>
    <string name="monitor_level">טווח פיקוח</string>
    <string name="monitor_level_c">פיקוח עדין</string>
    <string name="monitor_level_b">פיקוח קרוב</string>
    <string name="monitor_level_a">פיקוח צמוד</string>
    <string name="group_name">שם הקבוצה</string>
    <string name="nick_name">שם תצוגה</string>
    <string name="birth_date">תאריך לידה</string>
    <string name="very_realigns">שומר שבת</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_guides_desh_board">GuidesDeshBoardActivity</string>
    <string name="create_new_tour">טיול חדש</string>
    <string name="add_tours_screen">הוספת טיולים חדשים</string>
    <string name="title_activity_tours_scrolling">ToursScrollingActivity</string>
    <string name="add_tour">הוספת טיול</string>
    <string name="tours_list">הצג רשימת טיולים</string>
    <string name="show_tours_list">לרשימת הטיולים</string>
    <string name="add_new_tour">הוספת טיול</string>
</resources>