<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_camera" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/show_guides"
            android:icon="@drawable/guidesmall"
            android:title="@string/show_guides" />
        <item
            android:id="@+id/show_my_home"
            android:icon="@drawable/hotelic"
            android:title="@string/show_my_home" />
        <item
            android:id="@+id/show_list_of_groups"
            android:icon="@drawable/travelersmall"
            android:title="@string/show_list_of_groups" />
        <item
            android:id="@+id/change_options"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/change_options" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
            <item
                android:id="@+id/nav_call"
                android:icon="@drawable/ic_phone_black_24dp"
                android:title="@string/nav_call" />
        </menu>
    </item>

</menu>
