<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sweper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".travelers.ShowTravelersOnFireBase">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_show_users"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="טלפון"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/phone_in_show_users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phonenumber" />

        <TextView
            android:id="@+id/leivingAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/user_name_in_show_users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showedname" />

        <ImageView
            android:id="@+id/image_of_user_in_show_the_users"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/profilepicture"
            android:cropToPadding="true"
            android:scaleType="fitCenter" />
    </androidx.recyclerview.widget.RecyclerView>


</androidx.constraintlayout.widget.ConstraintLayout>