<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/regTravelerContainer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="visible"
    tools:context=".TravelerRegActivity"
    tools:visibility="visible">

    <fragment
        android:id="@+id/listOfGroupFrag"
        android:name="com.example.trvelingingroup10.GroupFragment"
        android:layout_width="411dp"
        android:layout_height="322dp"
        android:layout_marginBottom="8dp"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        tools:layout="@layout/fragment_group_list" />

    <TableLayout
        android:id="@+id/travelerTableGrid"
        android:layout_width="408dp"
        android:layout_height="331dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/listOfGroupFrag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/mTextMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:contentDescription="@string/travele_reg_massage"
                android:text="@string/traveler_reg_page_masage"
                android:visibility="visible" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/passwordFld"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/fillInPassword"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/current_group_txt_fld"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/currentGroup"
                android:inputType="textMultiLine" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/BirthDateFld"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date|datetime" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/AddressFld"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPostalAddress" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/isRealignsCB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isreligus" />

            <CheckBox
                android:id="@+id/isKosherCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/isKosher" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/isBlaindCB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isblainde" />

            <CheckBox
                android:id="@+id/isDeffCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/isdeff" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/isMinerCB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/miner" />

            <CheckBox
                android:id="@+id/isNeedHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/needhelp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sendTravelRegDataBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/send_data" />

            <Button
                android:id="@+id/startTravelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/start_travel" />
        </TableRow>

    </TableLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="340dp" />

</androidx.constraintlayout.widget.ConstraintLayout>