<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/regGuideContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuideRegActivity"
    tools:visibility="visible">

    <TableLayout
        android:id="@+id/GuideGridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        app:layout_constraintBottom_toTopOf="@+id/travelersListFrag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:visibility="visible">

            <TextView
                android:id="@+id/mTextMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/title_home" />

            <TextView
                android:id="@+id/travelerShowedDetailsFld"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="traveler detail"
                tools:visibility="visible" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/guideNameFld"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GuideName" />

            <TextView
                android:id="@+id/spokentangfld"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spokentang" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/localGuideCb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/localguide" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/addNewGroupBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addNewGroup" />

            <Button
                android:id="@+id/addNewGuideBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addNewGuide"
                tools:visibility="visible" />

            <Button
                android:id="@+id/startTourGuideBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startAsTourguide" />
        </TableRow>
    </TableLayout>

    <fragment
        android:id="@+id/travelersListFrag"
        android:name="com.example.trvelingingroup10.TravelerFragment"
        android:layout_width="412dp"
        android:layout_height="454dp"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GuideGridLayout"
        tools:layout="@layout/fragment_traveler_list" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/travelersListFrag"
        app:menu="@menu/bottom_nav_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>