<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/traveler_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:visibility="visible">


    <ImageView
        android:id="@+id/image_user_Profile_Picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <TextView
        android:id="@+id/user_uid"
        android:layout_width="174dp"
        android:layout_height="31dp"
        android:background="#C9AB8E8E"
        android:text="@string/userId"
        android:textSize="@dimen/regularTextSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/user_fullName"
        app:layout_constraintTop_toBottomOf="@+id/image_user_Profile_Picture" />


    <TextView
        android:id="@+id/user_fullName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="@dimen/regularTextSize"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/user_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_date_of_birth" />

    <TextView
        android:id="@+id/user_displayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="@dimen/regularTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_uid" />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="153dp"
        android:layout_height="38dp"
        android:background="#C9AB8E8E"
        android:text="@string/userEmail"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/add_traveler_to_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_date_of_birth" />

    <TextView
        android:id="@+id/user_date_of_birth"
        android:layout_width="183dp"
        android:layout_height="34dp"
        android:background="#C9AB8E8E"
        android:text="@string/date_of_birth"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_displayName" />

    <Button
        android:id="@+id/add_traveler_to_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="הוסף מטייל לקבוצה"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_date_of_birth" />


</androidx.constraintlayout.widget.ConstraintLayout>
